syntax = "proto3";
package hmb.protobuf;

message ExampleUserInfoRequest {
  int32 userId = 1;
}

message ExampleUserInfoResponse {
  int32 userType = 1;
  string mobile = 2;
}